--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
         <meta name="twitter:title" content="Ecole 241 Business" />
         <meta name="twitter:description" content="Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique." />
-        <link rel="canonical" href="" />
-        <link rel="icon" href="" />
+        <link rel="canonical" href="images/assets-wf5suawu.png" />
+        <link rel="icon" href="images/assets-wf5suawu.png" />
         <link rel="stylesheet" href="css/css-j5m8fgybln8l-02421f1add241e66ca488626436901d8b680dae7.css" />
         <style tyle="text/css">
             body {
