amelioration img ambassadeurs

--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -603,7 +603,7 @@
                 <div class="testimonials">
                     <div class="testimonial withAvatar mySlides">
                         <h1>Nos ambassadeurs</h1>
-                        <img src="images/slide1.jpg" class="testimonial__image" />
+                        <img src="images/chef.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">O'MIEL Junior</div>
                         <a class="testimonial__about weight-text-m">Chef cuisinier - Alimentation</a>
@@ -611,7 +611,7 @@
                     <!-- Deuxième slide -->
                     <div class="testimonial withAvatar mySlides">
                         <h1>Nos ambassadeurs</h1>
-                        <img src="images/slide2.jpg" class="testimonial__image" />
+                        <img src="images/JOSIANE-MATENE.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">MATÉNÉ Josiane</div>
                         <a class="testimonial__about weight-text-m">Samba professionnels </a>
@@ -619,7 +619,7 @@
                     <!-- Troisième slide -->
                     <div class="testimonial withAvatar mySlides">
                         <h1>Nos ambassadeurs</h1>
-                        <img src="images/slide3.jpg" class="testimonial__image" />
+                        <img src="images/Dona-Pascale-EYANG-NDONG-e1528853501703.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">Dona Pascale EYANG NDONG</div>
                         <a class="testimonial__about weight-text-m">C.E.O Dona PEN Design - Textile</a>
@@ -627,7 +627,7 @@
                     <!-- Quatrième slide -->
                     <div class="testimonial withAvatar mySlides">
                     <h1>Nos ambassadeurs</h1>
-                        <img src="images/slide4.jpg" class="testimonial__image" />
+                        <img src="images/NDOUMBOU-LINGOMBE.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">Hildia NDOUMBOU LINGOMBE</div>
                         <p class="testimonial__about weight-text-m"> C.E.O Mexhilus.Ymc - Art</p>
@@ -759,7 +759,7 @@
                         <div class="contact__item"><label class="weight-text-m">Type the numbers from the image above</label><input type="text" id="contactCaptchaSolution_r8ypt4cm2c" class="color-1" /></div>
                     </div>
                     <div id="contactError_r8ypt4cm2c" class="contact__error"></div>
-                    <button id="contactSubmit_r8ypt4cm2c" class="btn btn--c btn--primary btn--large" style="color: rgba(255, 255, 255, 1); background-color: #003366;">Je me lance</button>
+                    <button id="contactSubmit_r8ypt4cm2c" class="btn btn--c btn--primary btn--large" style="color: rgba(255, 255, 255, 1); background-color: #003366;">Envoyer</button>
                 </form>
                 <script>
                     !(function () {
