--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -6,8 +6,14 @@
         <title>Ecole 241 Business</title>
         <meta name="description" content="Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique." />
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
-        <meta name="twitter:title" content="Ecole 241 Business" />
-        <meta name="twitter:description" content="Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique." />
+      
+        <meta name="og:title" content="Ecole 241 Business">
+        <meta name="og:type" content="Site">
+        <meta name="og:logo" content="images/logoecole241.png" />
+        <meta name="og:url" content="https://business.ecole241.org/index.php/partage/7b52009b64fd0a2a49e6d8a939753077792b0554" />
+        <meta name="og:site_name" content="Ecole 241 Business">
+        <meta name="og:description"content="Ecole 241 Business est un Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique..">
+
         <link rel="canonical" href="images/assets-wf5suawu.png" />
         <link rel="icon" href="images/assets-wf5suawu.png" />
         <link rel="stylesheet" href="css/css-j5m8fgybln8l-02421f1add241e66ca488626436901d8b680dae7.css" />
