--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -14,8 +14,8 @@
         <meta name="og:site_name" content="Ecole 241 Business">
         <meta name="og:description"content="Ecole 241 Business est un Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique..">
 
-        <link rel="canonical" href="images/assets-wf5suawu.png" />
-        <link rel="icon" href="images/assets-wf5suawu.png" />
+        <link rel="canonical" href="images/logoecole241.png" />
+        <link rel="icon" href="images/logoecole241.png" />
         <link rel="stylesheet" href="css/css-j5m8fgybln8l-02421f1add241e66ca488626436901d8b680dae7.css" />
         <style tyle="text/css">
             body {
@@ -185,7 +185,7 @@
         <header id="header" class="section header dark header--fixed header--solid" style="background-color: #fff; border-color: rgba(0, 0, 0, 0.1); --wr-max: 1200px; color: rgba(0, 51, 102, 1);">
             <div class="wr color-1" style="margin-top: 10px; margin-bottom: 10px;">
                 <nav id="headerNav">
-                    <a id="headerLogo" href="ecole-241-business-accueil.html" class="header__logoImg"><img src="images/assets-wf5suawu.png" width="160" alt="Logo-officiel-E-241-Business-Transparent (1).png" /></a>
+                    <a id="headerLogo" href="ecole-241-business-accueil.html" class="header__logoImg"><img src="images/logoecole241.png" width="160" alt="Logo-officiel-E-241-Business-Transparent (1).png" /></a>
                     <div class="spacer"></div>
                     <div class="headerNav__links"></div>
                     <!-- Icônes des réseaux sociaux -->
