--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -10,6 +10,7 @@
         <meta name="og:title" content="Ecole 241 Business">
         <meta name="og:type" content="Site">
         <meta name="og:logo" content="images/logoecole241.png" />
+        <meta name="og:image" content="images/logoecole241.png" />
         <meta name="og:url" content="https://business.ecole241.org/index.php/partage/7b52009b64fd0a2a49e6d8a939753077792b0554" />
         <meta name="og:site_name" content="Ecole 241 Business">
         <meta name="og:description"content="Ecole 241 Business est un Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique..">
