amelioration mpar commercial

--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -352,7 +352,7 @@
             class="section section--titles section--center dark section--bnseerbnkgr"
             style="background-color: rgba(255, 255, 255, 1); padding-bottom: 30px; padding-top: 20px; --pdx-min-height: 0px; --wr-max: 1200px; font-size: 14px; color: rgba(255, 51, 51, 1);"
         >
-            <div class="wr"><h2 class="color-1 weight-title-h font-title section__title center standalone">FORMATION EN PRESENTIEL A PARTIR DU 02 NOVEMBRE 2020</h2></div>
+            <div class="wr"><h2 class="color-1 weight-title-h font-title section__title center standalone">FORMATION EN PRESENTIEL A PARTIR DE NOVEMBRE 2020</h2></div>
         </div>
         <!-- Section pour expliquer le pourquoi -->
         <div id="gallery" class="section section--gallery section--center dark section--kmnflc1iuln" style="background-color: #003366; padding-bottom: 75px; padding-top: 60px; --pdx-min-height: 0px; --wr-max: 1200px;">
