--- a/ecole-241-business-commercial.html
+++ b/ecole-241-business-commercial.html
@@ -6,11 +6,28 @@
         <title>Devenir Commercial</title>
         <meta name="description" content="Deviens commercial pour le compte de l'Ecole 241 Business et fais-toi de l'argent gr&acirc;ce &agrave; tes aptitudes en communication." />
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
-        <meta name="twitter:title" content="Devenir Commercial" />
-        <meta name="twitter:description" content="Deviens commercial pour le compte de l'Ecole 241 Business et fais-toi de l'argent gr&acirc;ce &agrave; tes aptitudes en communication." />
         <link rel="canonical" href="https://ecole-241-business.landen.co/devenir-commercial" />
+
+
         <link rel="icon" href="favicons/defaults-favicon.ico" />
         <link rel="stylesheet" href="css/css-j5m8fgybln8l-02421f1add241e66ca488626436901d8b680dae7.css" />
+
+                <meta name="description" content="Deviens commercial pour le compte de l'Ecole 241 Business et fais-toi de l'argent gr&acirc;ce &agrave; tes aptitudes en communication." />
+                <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+                
+                <meta name="og:title" content="Ecole 241 Business">
+                <meta name="og:type" content="Site">
+                <meta name="og:logo" content="images/logoecole241.png" />
+                <meta name="og:image" content="images/logoecole241.png" />
+                <meta name="og:url"
+                    content="https://business.ecole241.org/index.php/partage/7b52009b64fd0a2a49e6d8a939753077792b0554" />
+                <meta name="og:site_name" content="Ecole 241 Business">
+                <meta name="og:description"
+                    content="Ecole 241 Business est un Ecole de formation pour les commer&ccedil;ants et artisans aux m&eacute;tiers du num&eacute;rique..">
+                
+                <link rel="canonical" href="images/logoecole241.png" />
+                <link rel="icon" href="images/logoecole241.png" />
+                <link rel="stylesheet" href="css/css-j5m8fgybln8l-02421f1add241e66ca488626436901d8b680dae7.css" />
         <style tyle="text/css">
             body {
                 font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
@@ -146,7 +163,7 @@
         <header id="header" class="section header dark header--fixed header--solid" style="background-color: #fff; border-color: rgba(0, 0, 0, 0.1); --wr-max: 1200px; color: rgba(0, 51, 102, 1);">
             <div class="wr color-1" style="margin-top: 10px; margin-bottom: 10px;">
                 <nav id="headerNav">
-                    <a id="headerLogo" href="ecole-241-business-accueil.html" class="header__logoImg"><img src="images/assets-wf5suawu.png" width="160" alt="Logo-officiel-E-241-Business-Transparent (1).png" /></a>
+                    <a id="headerLogo" href="ecole-241-business-accueil.html" class="header__logoImg"><img src="images/logoecole241.png" width="160" alt="Logo-officiel-E-241-Business-Transparent (1).png" /></a>
                     <div class="spacer"></div>
                     <div class="headerNav__links"></div>
                     <!-- Icônes des réseaux sociaux -->
@@ -246,7 +263,7 @@
                             <div class="media"><img src="images/assets-c8asf0bf.png" srcset="https://landen.imgix.net/j5m8fgybln8l/assets/c8asf0bf.png?w=800&amp;h=400&amp;fit=crop 2x" alt="" /></div>
                             <div class="gallery__meta">
                                 <h3 class="color-1 weight-text" style= "font-weight: bold; text-align: center;">10% de commissions</h3>
-                                <div class="gallery__description" style= "text-align: center;">Soit 15.000 Fcfa par apprenant.</div>
+                                <div class="gallery__description" style= "text-align: center;">Sur chaque apprenant .</div>
                             </div>
                         </div>
                     </div>
