--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -25,6 +25,13 @@
                 font-weight: 400;
                 --title-scale: 1;
             }
+            @media only screen and (max-width: 370px) {
+                .galleryItem {
+                background: #fff;
+                margin: 0 15px 30px;
+                overflow: hidden;
+                min-width: 345px;
+            }
             @media only screen and (max-width: 320px) {
                 .galleryItem {
                 background: #fff;
