--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -30,6 +30,12 @@
                     --title-scale: 0.7;
                 }
             }
+
+            @media screen and (max-width:600px){
+                div.galleryItem{
+                    width: 90% !important;
+                }
+            }
             .wr {
                 max-width: 1200px;
                 max-width: var(--wr-max);
@@ -360,7 +366,7 @@
                 <h2 class="color-1 weight-title-h font-title section__title center standalone" style="color: #ffffff;"class="color-1 weight-title-h font-title section__title center standalone" style="color: #ffffff;">NOUS SAVONS QUE 90% <p style="font-size: 24px;"> DE LA GESTION DES OUTILS NUMERIQUES EST PRISE EN CHARGE PAR VOUS-MEMES ET VOUS MANQUEZ DE... </p></h2>
                 
                 <div class="gallery" style="margin: 0 -15px -30px; margin-top: 0 -15px -30px; margin-bottom: 0 -15px -30px;">
-                    <div class="galleryItem" style="width: calc(25% - 30px); margin: 0 15px 30px; border-radius: 5px; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.2); margin-top: 0 15px 30px; margin-bottom: 0 15px 30px;">
+                    <div class="galleryItem" style="width: calc(25% - 30px); margin: 0 15px 10px; border-radius: 5px; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.2); margin-top: 0 15px 30px; margin-bottom: 0 15px 30px;;">
                         <div target="">
                             <div class="media"><img src="images/temps.png" srcset="https://landen.imgix.net/j5m8fgybln8l/assets/vpj90v87.png?w=600&amp;h=400&amp;fit=crop 2x" alt="" /></div>
                             <div class="gallery__meta"><h3 class="color-1 weight-text" style="text-align: center; font-weight: bold;">Temps</h3><p style="font-size: 16px; text-align: center;">Nous allons vous montrer les outils et les méthodes qui vont vous faire gagner du temps.</p>
@@ -648,7 +654,7 @@
             </div>
             <div class="wr">
                 <h2 class="color-1 weight-title-h font-title section__title center">CO&Ucirc;T DES FORMATIONS</h2>
-                <p class="weight-text section__subtitle center" style="color: #000000;">Frais de d&eacute;p&ocirc;t de dossiers: <b style="color: #ff3333; font-size: 25px; font-weight: bold;">5.000 Fcfa*</b></p>
+                <p class="weight-text section__subtitle center" style="color: #000000;font-size: 1.2em;">Frais de d&eacute;p&ocirc;t de dossiers: <b style="color: #ff3333; font-weight: bold;">5.000 Fcfa*</b></p>
                 <div class="pricing">
                     <div id="pricingTiers_r8yywwkwjhg" class="pricingTiers active-a">
                         <div class="pricingTierWrapper" style="border-radius: 5px; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.2); background-color: rgba(255, 255, 255, 1);">
