--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -32,15 +32,29 @@
                 overflow: hidden;
                 min-width: 345px;
             }
-            @media only screen and (max-width: 320px) {
+            .section__subtitle {
+                text-align: center;
+                margin: 0 0 50px;
+                font-weight: 500;
+                font-size: 1em;
+            }
+            
+            }
+            @media only screen and (max-width: 360px) {
                 .galleryItem {
                 background: #fff;
                 margin: 0 15px 30px;
                 overflow: hidden;
                 min-width: 290px;
             }
+            .section__subtitle {
+                text-align: center;
+                margin: 0 0 50px;
+                font-weight: 500;
+                font-size: 1em;
             }
-            
+            }
+
 
             @media only screen and (max-width: 750px) {
                 body {
