amelioration des cards

--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -433,7 +433,7 @@
                             <div target="">
                                 <div class="media"><img src="images/deuxième.png" srcset="https://landen.imgix.net/j5m8fgybln8l/assets/oaa6kvq3.png?w=800&amp;h=400&amp;fit=crop 2x" alt="" /></div>
                                 <div class="gallery__meta">
-                                    <h3 class="color-1 weight-text" style= "font-weight: bold; text-align: center;">3x Chance d'être en croissance</h3>
+                                    <h3 class="color-1 weight-text" style= "font-weight: bold; text-align: center;">3x Plus de chance d'être en croissance</h3>
                                     
                                 </div>
                             </div>
@@ -442,7 +442,7 @@
                             <div target="">
                                 <div class="media"><img src="images/troisième.png" srcset="https://landen.imgix.net/j5m8fgybln8l/assets/t7jqsrnl.png?w=800&amp;h=400&amp;fit=crop 2x" alt="" /></div>
                                 <div class="gallery__meta">
-                                    <h3 class="color-1 weight-text" style= "font-weight: bold; text-align: center;">4x Grandissent plus vite</h3>
+                                    <h3 class="color-1 weight-text" style= "font-weight: bold; text-align: center;">4x de chance que votre entreprise grandissent plus vite</h3>
                                     
                                 </div>
                             </div>
