--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -668,7 +668,7 @@
                         <img src="images/JOSIANE-MATENE.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">Josiane MATÉNÉ </div>
-                        <a class="testimonial__about weight-text-m">Organisatrise des Sambas professionnels </a>
+                        <a class="testimonial__about weight-text-m">C.E.O des Sambas professionnels </a>
                     </div>
                     <!-- Troisième slide -->
                     <div class="testimonial withAvatar mySlides">
