--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -72,7 +72,20 @@
                     display: block;
                 }
             }
-
+            @media only screen and (max-width: 700px){
+                .wr {
+                        text-align: center;
+                        padding: 0 15px;
+                    }
+                   .footer__social {
+                        display: flex;
+                        list-style-type: none;
+                        /* padding-left: 145px; */
+                        align-items: center;
+                        justify-content: center;
+                        width: 100%;
+                    }
+            }
             @media screen and (max-width:600px){
                 #headerMenuButton{
                     display: block;
@@ -498,7 +511,7 @@
                                     <h3 class="ftPoint__title color-1 weight-text-m">ETUDE DE MARCHE</h3>
                                     <div class="ftPoint__description">
                                         <p style="color: black;">
-                                            Apprenez à connaitre vos clients en ligne , les lieux où ils se trouvent et arrivent à comprendre ce qu'ils veulent .
+                                            Apprenez à connaitre vos clients en ligne , les lieux où ils se trouvent et arrivez à comprendre ce qu'ils veulent .
                                         </p>
                                     </div>
                                 </div>
@@ -512,7 +525,7 @@
                                 </div>
                                 <div class="ftPoint__meta">
                                     <h3 class="ftPoint__title color-1 weight-text-m">PRODUITS ET SERVICE</h3>
-                                    <div class="ftPoint__description"><p style="color: black;">Créer où améliore votre produit ou service pour répondre aux attentes de vos clients en ligne .</p></div>
+                                    <div class="ftPoint__description"><p style="color: black;">Créer ou améliorez votre produit ou service pour répondre aux attentes de vos clients en ligne .</p></div>
                                 </div>
                             </div>
                             <div class="ftPoint">
@@ -547,7 +560,7 @@
                                     <h3 class="ftPoint__title color-1 weight-text-m">FINANCE ET AUTOMATISATION</h3>
                                     <div class="ftPoint__description">
                                         <p style="color: black;">
-                                            Suivez vos paiements électroniques et physiques en ligne où apprenne à automatiser au maximum votre croissance .
+                                            Suivez vos paiements électroniques et physiques en ligne et apprennez à automatiser au maximum votre croissance .
                                         </p>
                                     </div>
                                 </div>
@@ -702,7 +715,7 @@
                         <div class="pricingTierWrapper" style="border-radius: 5px; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.2); background-color: rgba(255, 255, 255, 1);">
                             <div class="pricingTier">
                                 <h3 class="pricingTier__title color-1 weight-text-m">EN PRESENTIEL</h3>
-                                <p class="pricingTier__description">Cours du matin ou de l'apr&egrave;s-midi &agrave; la fabrique Ecole 241.</p>
+                                <p class="pricingTier__description">Soit en cours du matin ou de l'apr&egrave;s-midi &agrave; la fabrique Ecole 241.</p>
                                 <div class="pricingTier__price a;" style="font-weight: bold;"><span class="price color-1">150.000F</span></div>
                                 <ul class="pricingTier__features">
                                     <li class="color-1">
