--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -71,6 +71,10 @@
                 #headerMenuButton{
                     display: block;
                 }
+                .footer__primary{
+                    margin-right:0;
+                    margin-bottom:0;
+                }
             }
             @media only screen and (max-width: 700px){
                 .wr {
