--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -68,9 +68,16 @@
                 body {
                     --title-scale: 0.7;
                 }
-                #headerMenuButton{
+                /* #headerMenuButton{
                     display: block;
                 }
+                .header__navCtas {
+                    display: none;
+                   
+                }
+                .header--withDrawer #headerMenuButton {
+                    display: block;
+                } */
                 .footer__primary{
                     margin-right:0;
                     margin-bottom:0;
@@ -319,8 +326,8 @@
                 <div class="ft__half">
                     <div class="ft__wrapper" style="max-width: 570px;">
                         <div class="ft__content">
-                            <h1 class="hero__title color-1 weight-title-h font-title">Apprenez &agrave; vous servir du digital pour faire cro&icirc;tre <br> votre entreprise.</h1>
-                            <p class="hero__subtitle weight-text">Inscrivez-vous &agrave; l'Ecole 241 Business et apprenez comment &eacute;tendre votre activit&eacute; commerciale en ligne.</p>
+                            <h1 class="hero__title color-1 weight-title-h font-title">Apprenez &agrave; vous servir du digital pour faire cro&icirc;tre <br> votre activite.</h1>
+                            <p class="hero__subtitle weight-text">Inscrivez-vous &agrave; l'Ecole 241 Business et apprenez comment &eacute;tendre votre activit&eacute; commerciale ou artisanale en ligne.</p>
                             <div class="ctas">
                                 <a href="s-inscrire.html" class="btn btn--c btn--primary btn--large" style="color: rgba(255, 255, 255, 1); background-color: rgba(255, 51, 51, 1);">
                                     Je m'inscris
@@ -515,7 +522,7 @@
                                     <h3 class="ftPoint__title color-1 weight-text-m">ETUDE DE MARCHE</h3>
                                     <div class="ftPoint__description">
                                         <p style="color: black;">
-                                            Apprenez à connaitre vos clients en ligne , les lieux où ils se trouvent et arrivez à comprendre ce qu'ils veulent .
+                                            Apprenez à connaitre vos clients en ligne, les lieux où ils se trouvent et arrivez à comprendre ce qu'ils veulent.
                                         </p>
                                     </div>
                                 </div>
@@ -529,7 +536,7 @@
                                 </div>
                                 <div class="ftPoint__meta">
                                     <h3 class="ftPoint__title color-1 weight-text-m">PRODUITS ET SERVICE</h3>
-                                    <div class="ftPoint__description"><p style="color: black;">Créer ou améliorez votre produit ou service pour répondre aux attentes de vos clients en ligne .</p></div>
+                                    <div class="ftPoint__description"><p style="color: black;">Créer ou améliorez votre produit ou service pour répondre aux attentes de vos clients en ligne.</p></div>
                                 </div>
                             </div>
                             <div class="ftPoint">
@@ -547,7 +554,7 @@
                                     <h3 class="ftPoint__title color-1 weight-text-m">ACQUISITION ET CONVERSION</h3>
                                     <div class="ftPoint__description">
                                         <p style="color: black;">
-                                            Pensez et exécutez les stratégies d'acquisition et de conversion de prospects en clients .
+                                            Pensez et exécutez les stratégies d'acquisition et de conversion de prospects en clients.
                                         </p>
                                     </div>
                                 </div>
@@ -564,7 +571,7 @@
                                     <h3 class="ftPoint__title color-1 weight-text-m">FINANCE ET AUTOMATISATION</h3>
                                     <div class="ftPoint__description">
                                         <p style="color: black;">
-                                            Suivez vos paiements électroniques et physiques en ligne et apprennez à automatiser au maximum votre croissance .
+                                            Suivez vos paiements électroniques et physiques en ligne et apprennez à automatiser au maximum votre croissance.
                                         </p>
                                     </div>
                                 </div>
@@ -677,7 +684,7 @@
                         <img src="images/chef.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">Chef O'MIEL</div>
-                        <a class="testimonial__about weight-text-m">Chef - Restauration</a>
+                        <a class="testimonial__about weight-text-m">Restaurant chef O'miel</a>
                     </div>
                     <!-- Deuxième slide -->
                     <div class="testimonial withAvatar mySlides">
