--- a/ecole-241-business-accueil.html
+++ b/ecole-241-business-accueil.html
@@ -684,7 +684,7 @@
                         <img src="images/chef.jpg" class="testimonial__image" />
 
                         <div class="testimonial__quote color-1">Chef O'MIEL</div>
-                        <a class="testimonial__about weight-text-m">Restaurant chef O'miel</a>
+                        <a class="testimonial__about weight-text-m">Restaurant le Chef O'miel</a>
                     </div>
                     <!-- Deuxième slide -->
                     <div class="testimonial withAvatar mySlides">
